--- a/Index.html
+++ b/Index.html
@@ -12,28 +12,28 @@
         </div>
         <article>
             <h1>Kami Wells</h1>
-            <p id="coloured">Lagos, Nigeria</p>
+            <p class="coloured">Lagos, Nigeria</p>
             <span>
-                <p>
+                <p class="para-g">
                     "Front-end developer and avid reader."
                 </p>
         </article>
         <section class="container">
             </span>
             <div class="button">
-                <a href="https://github.com/Kamiwells" target="_blank">Github</a>
+                <a href="https://github.com/Kamiwells" target="_blank" class="go-to">Github</a>
             </div>
             <div class="button">
-                <a href="https://www.frontendmentor.io/profile/Kamiwells" target="_blank">Frontend Mentor</a>
+                <a href="https://www.frontendmentor.io/profile/Kamiwells" target="_blank" class="go-to">Frontend Mentor</a>
             </div>
             <div class="button">
-                <a href="https://www.linkedin.com/in/emmanuel-egbhaname-19b94720a" target="_blank">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/emmanuel-egbhaname-19b94720a" target="_blank" class="go-to">LinkedIn</a>
             </div>
             <div class="button">
-                <a href="https://x.com/egbhaname_e" target="_blank">Twitter</a>
+                <a href="https://x.com/egbhaname_e" target="_blank" class="go-to">Twitter</a>
             </div>
             <div class="button">
-                <a href=" https://www.instagram.com/_emmanuelhr_/?next=%2F" target="_blank">Instagram</a>
+                <a href=" https://www.instagram.com/_emmanuelhr_/?next=%2F" target="_blank" class="go-to">Instagram</a>
             </div>
         </section>
     </Main>
